--- a/intex.html
+++ b/intex.html
@@ -9,5 +9,12 @@
 <body>
     
     <h1>vtmr</h1>
+
+    <input type="text" name="" id="">
+    <input type="text" name="" id="">
+    <input type="text" name="" id="">
+    <input type="text" name="" id="">
+
+    <p>esto en una rama</p>
 </body>
 </html>
